--- a/index.html
+++ b/index.html
@@ -1,26 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Kava_Avenue</title>
+    <title>Kava Avenue</title>
     <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
 </head>
 
 <body>
     <header>
-        <nav>
-            <h1>Kava Avenue</h1>
-            <h2>Кав'ярня твоїх ідей!</h2>
-            <h3>Ми завжди в центрі подій і новин</h3>
-            <img src="img/coflit.jpg" alt="coffe">
+        <div>
+        <h1>Kava Avenue</h1>
+            <p>Кав'ярня твоїх ідей!</p>
+            <p>Ми завжди в центрі подій і новин</p>
+            <img src="img/coffee-bean.png" alt="кавові зерна">
             <form>
                 <input type="search" name="find" placeholder="Пошук по сайту">
                 <input type="submit" value="Найти">
             </form>
-        </nav>
+            </div>
+     <nav>
         <ul>
             <li> <a href="#menu">Меню</a> </li>
             <li><a href="#news">Новини</a> </li>
@@ -28,7 +29,8 @@
             <li><a href="#galeria">Галерея</a> </li>
             <li><a href="#contact">Контакти</a> </li>
         </ul>
-        <img src="img/coflit.jpg" alt="coffelit">
+            </nav>
+        <img src="img/coffee-bean.png" alt="кавові зерна вид">
     </header>
     <main>
         <section id="menu">
@@ -37,20 +39,20 @@
         </section>
         <section id="news">
             <h2> Акції від Kava Avenue</h2>
-            <img src="img/wol.jpg" alt="prise" title="подарунки від наших клієнтів"> <br>
+            <img src="img/wol.jpg" alt="подарунки" title="подарунки від наших клієнтів"> <br>
             <h2>Проводимо конкурс на кращий малюнок від наших відданих кавоманів.<br> Переможця обиратимете сами ви, шляхом голосування.<br> Кращі з кразих отримають у подарунки горнятка з емблемаою <br> Kava Avenue, 1кг кави і ще сюрприз)</h2>
             <h2> Новини Володимира за чашечкою кави</h2>
-            <img src="img/news1.jpg" alt=bitwatalantiv title="Битва талантів у Володимирі">
+            <img src="img/news.jpg" alt="битва талантів" title="Битва талантів у Володимирі">
         </section>
         <section id="galeria">
             <h1>Фото від нас і наших кавоманів</h1>
             <img src="img/glass.jpg" alt="kavaavenue" title="Добрий ранок з кава авеню"> <br>
             <h2>Рубрика "Добрий ранок!"</h2> <br>
-            <img src="img/ranok.jpg" alt="ranokkavaavenue" title="Ранок розпочинається з кави">
+            <img src="img/ranok.jpg" alt="ранок з кава авеню" title="Ранок розпочинається з кави">
         </section>
         <section id="about">
             <h1>Трішки історії</h1>
-            <h2>Все почалось з чашечки запашної кави в Луцьку:) <br> яка пробудила думки і запалила ідею... ідею яка втілилась в життя не так і давно, в 2015році</h2>
+            <h2>Все почалось з чашечки запашної кави у Луцьку:) <br> яка пробудила думки і запалила ідею... ідею яка втілилась в життя не так і давно, в 2015році</h2>
         </section>
     </main>
     <form>
@@ -82,11 +84,11 @@
         <h4> Ми працюємо для Вас з 9:00 до 19:00. м. Володимир-Волинський <br> Кавовий адміністратор-<br> Директор- </h4>
         <h3>Співпраця</h3>
         <h4> Ми радо сприяємо ініціативам та готові до співпраці з цікавими творчими людьми, пишіть, телефонуйте, ми відкриті для Вас!</h4>
-        <img src="img/foter.png" alt="foteraimg">
+        <img src="img/foter.png" alt="кавові зерна">
     </footer>
 
-    <span>м. Володимир-Волинський. Kava Avenue. 093 000 00 00
-         Cайт створено Olexandr911</span>
-</body>
+    <p>м. Володимир-Волинський. Kava Avenue. 093 000 00 00
+         Cайт створено Olexandr911</p>
+          </body>
 
 </html>
