--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Kava Avenue</title>
     <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
+    <link rel="stylesheet" href="css/index.css">
 </head>
 
 <body>
@@ -14,7 +15,7 @@
         <div>
         <h1>Kava Avenue</h1>
             <p>Кав'ярня твоїх ідей!</p>
-            <p>Ми завжди в центрі подій і новин</p>
+            <p>Ми завжди в центрі подій</p>
             <img src="img/coffee-bean.png" alt="кавові зерна">
             <form>
                 <input type="search" name="find" placeholder="Пошук по сайту">
