--- a/index.html
+++ b/index.html
@@ -7,22 +7,17 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Kava Avenue</title>
     <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
-    <link rel="stylesheet" href="css/index.css">
+    <link href="css/index.css" rel="stylesheet">
 </head>
-
 <body>
-    <header>
-        <div>
-        <h1>Kava Avenue</h1>
-            <p>Кав'ярня твоїх ідей!</p>
-            <p>Ми завжди в центрі подій</p>
-            <img src="img/coffee-bean.png" alt="кавові зерна">
-            <form>
-                <input type="search" name="find" placeholder="Пошук по сайту">
-                <input type="submit" value="Найти">
-            </form>
-            </div>
-     <nav>
+<header>
+      <div class="kavaavenue"><h1>Kava Avenue</h1></div>
+    <div class="idei">  <p>Кав'ярня твоїх ідей!</p></div>
+<form>
+            <input type="search" name="find" placeholder="Пошук по сайту">
+            <input type="submit" value="Найти">
+        </form>
+ <nav class="linemenu">
         <ul>
             <li> <a href="#menu">Меню</a> </li>
             <li><a href="#news">Новини</a> </li>
@@ -30,66 +25,64 @@
             <li><a href="#galeria">Галерея</a> </li>
             <li><a href="#contact">Контакти</a> </li>
         </ul>
-            </nav>
-        <img src="img/coffee-bean.png" alt="кавові зерна вид">
-    </header>
-    <main>
-        <section id="menu">
-            <h2> КАВОВІ НАПОЇ</h2>
-            <p>Еспресо 30 мл 10 грн Американо 12грн Американо з молоком 14 грн Рістрето 15 мл 18 грн Допіо 60 мл 25 грн Американо 120 мл 12 грн Лате макіато 200 мл 16 грн Капучіно 250 мл 18 грн Флет-вайт 250 мл 22 грн</p>
-        </section>
-        <section id="news">
-            <h2> Акції від Kava Avenue</h2>
-            <img src="img/wol.jpg" alt="подарунки" title="подарунки від наших клієнтів"> <br>
-            <h2>Проводимо конкурс на кращий малюнок від наших відданих кавоманів.<br> Переможця обиратимете сами ви, шляхом голосування.<br> Кращі з кразих отримають у подарунки горнятка з емблемаою <br> Kava Avenue, 1кг кави і ще сюрприз)</h2>
-            <h2> Новини Володимира за чашечкою кави</h2>
-            <img src="img/news.jpg" alt="битва талантів" title="Битва талантів у Володимирі">
-        </section>
-        <section id="galeria">
-            <h1>Фото від нас і наших кавоманів</h1>
-            <img src="img/glass.jpg" alt="kavaavenue" title="Добрий ранок з кава авеню"> <br>
-            <h2>Рубрика "Добрий ранок!"</h2> <br>
-            <img src="img/ranok.jpg" alt="ранок з кава авеню" title="Ранок розпочинається з кави">
-        </section>
-        <section id="about">
-            <h1>Трішки історії</h1>
-            <h2>Все почалось з чашечки запашної кави у Луцьку:) <br> яка пробудила думки і запалила ідею... ідею яка втілилась в життя не так і давно, в 2015році</h2>
-        </section>
-    </main>
-    <form>
-        <fieldset>
-            <legend>Ваші побажання і пропозиції</legend>
-            <p><label for="name">Ім'я </label><input type="text" required placeholder="Name" id="name"></p>
-            <p><label for="email">Email адреса</label><input type="email" required placeholder="Email adress" id="email"></p>
-            <p><label for="text">Ваші побажання</label><input type="text" required placeholder="Write your messege" id="text"></p>
-            <p><input type="submit" value="Відправити"></p>
-        </fieldset>
-    </form>
-    <h3>Соціальні мережі</h3>
-    <h4> Приєднуйтесь до нас, та станьте частинкою нашої кавової сім'ї! </h4>
-    <a href="https://www.facebook.com/groups/KavaAvenue/"> Facebook</a>
-    <br>
-    <a href="https://www.vk.com/kavaavenue">VK</a>
-    <br>
-    <a href="https://www.instagram.com/kavaavenue_v_v/">Instagram</a>
-    <footer>
-        <section id="contact">
-            <h3>Контакти</h3>
-            <ul>
-                <li>вул. Луцька 12</li>
-                <li>вул. Ковельска 24 </li>
-                <li> вул. Данила Галицького (біля входу у ринок)</li>
-                <li> м.Устилуг (сервіс зона)</li>
-            </ul>
-        </section>
-        <h4> Ми працюємо для Вас з 9:00 до 19:00. м. Володимир-Волинський <br> Кавовий адміністратор-<br> Директор- </h4>
-        <h3>Співпраця</h3>
-        <h4> Ми радо сприяємо ініціативам та готові до співпраці з цікавими творчими людьми, пишіть, телефонуйте, ми відкриті для Вас!</h4>
-        <img src="img/foter.png" alt="кавові зерна">
-    </footer>
-
-    <p>м. Володимир-Волинський. Kava Avenue. 093 000 00 00
-         Cайт створено Olexandr911</p>
-          </body>
-
+    </nav>
+   
+</header>
+<main>
+     <img src="img/coffee-bean.png" alt="кавові зерна вид">
+       
+    <section id="menu">
+        <p> КАВОВІ НАПОЇ</p>
+        <p>Еспресо 30 мл 10 грн Американо 12грн Американо з молоком 14 грн Рістрето 15 мл 18 грн Допіо 60 мл 25 грн Американо 120 мл 12 грн Лате макіато 200 мл 16 грн Капучіно 250 мл 18 грн Флет-вайт 250 мл 22 грн</p>
+    </section>
+    <section id="news">
+        <p> Акції від Kava Avenue</p>
+        <img src="img/wol.jpg" alt="подарунки" title="подарунки від наших клієнтів"> <br>
+        <p>Проводимо конкурс на кращий малюнок від наших відданих кавоманів. Переможця обиратимете сами ви, шляхом голосування. Кращі з кразих отримають у подарунки горнятка з емблемаою  Kava Avenue, 1кг кави і ще сюрприз)</p>
+        <p> Новини Володимира за чашечкою кави</p>
+        <img src="img/news.jpg" alt="битва талантів" title="Битва талантів у Володимирі">
+    </section>
+    <section id="galeria">
+        <p>Фото від нас і наших кавоманів</p>
+        <img src="img/glass.jpg" alt="kavaavenue" title="Добрий ранок з кава авеню"> <br>
+        <p>Рубрика "Добрий ранок!"</p> <br>
+        <img src="img/ranok.jpg" alt="ранок з кава авеню" title="Ранок розпочинається з кави">
+    </section>
+    <section id="about">
+        <p>Трішки історії</p>
+        <p>Все почалось з чашечки запашної кави у Луцьку:)  яка пробудила думки і запалила ідею... ідею яка втілилась в життя не так і давно, в 2015році</p>
+    </section>
+</main>
+<form>
+    <fieldset>
+        <legend>Ваші побажання і пропозиції</legend>
+        <p><label for="name">Ім'я </label><input type="text" required placeholder="Name" id="name"></p>
+        <p><label for="email">Email адреса</label><input type="email" required placeholder="Email adress" id="email"></p>
+        <p><label for="text">Ваші побажання</label><input type="text" required placeholder="Write your messege" id="text"></p>
+        <p><input type="submit" value="Відправити"></p>
+    </fieldset>
+</form>
+<p>Соціальні мережі</p>
+<p> Приєднуйтесь до нас, та станьте частинкою нашої кавової сім'ї! </p>
+<a href="https://www.facebook.com/groups/KavaAvenue/"> Facebook</a>
+<br>
+<a href="https://www.vk.com/kavaavenue">VK</a>
+<br>
+<a href="https://www.instagram.com/kavaavenue_v_v/">Instagram</a>
+<footer>
+    <section id="contact">
+        <p>Контакти</p>
+        <ul>
+            <li>вул. Луцька 12</li>
+            <li>вул. Ковельска 24 </li>
+            <li> вул. Данила Галицького (біля входу у ринок)</li>
+            <li> м.Устилуг (сервіс зона)</li>
+        </ul>
+    </section>
+    <p> Ми працюємо для Вас з 9:00 до 19:00. м. Володимир-Волинський  Кавовий адміністратор- Директор- </p>
+    <p>Співпраця</p>
+    <p> Ми радо сприяємо ініціативам та готові до співпраці з цікавими творчими людьми, пишіть, телефонуйте, ми відкриті для Вас!</p>
+</footer>
+<p>м. Володимир-Волинський. Kava Avenue. 093 000 00 00 Cайт створено Olexandr911</p>
+</body>
 </html>
